Added image overlay and online away busy for user

--- a/src/app/layout/blank-page/blank-page.component.html
+++ b/src/app/layout/blank-page/blank-page.component.html
@@ -8,14 +8,30 @@
             <div class="row">
                 <div class="col-1" >
                 </div>
+
                 <div class="col-2" >
-                    <img class="user-avatar" src="assets/images/male.png" width="40px" style="border-radius:50%;"/>
+                    <div class="image_outer_container">
+                        <div class="green_icon"></div>
+                        <div class="image_inner_container">
+                            <img class="user-avatar" src="assets/images/male.png" width="40px" style="border-radius:50%;"/>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-2">
-                    <img class="user-avatar" src="assets/images/female.png" width="40px" style="border-radius:50%;"/>
+                    <div class="image_outer_container">
+                        <div class="red_icon"></div>
+                        <div class="image_inner_container">
+                            <img class="user-avatar" src="assets/images/female.png" width="40px" style="border-radius:50%;"/>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-2">
-                    <img class="user-avatar" src="assets/images/male.png" width="40px" style="border-radius:50%;"/>
+                    <div class="image_outer_container">
+                        <div class="yellow_icon"></div>
+                        <div class="image_inner_container">
+                            <img class="user-avatar" src="assets/images/male.png" width="40px" style="border-radius:50%;"/>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-5">
 
@@ -25,10 +41,19 @@
             <!-- second row with table image and 1 people-->
             <div class="row">
                 <div class="col-7">
-                    <img class="user-avatar" src="assets/images/table.png" width="300px" height="150px" />
+
+                    <div class="hovereffect">
+                        <img class="user-avatar" src="assets/images/table.png" width="300px" height="150px" />
+                        <div class="overlay">
+
+                            <p>
+                                <button type="button" class="btn btn-light">Join Table</button>
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-5 d-flex align-items-center" >
-                    <img class="user-avatar" src="assets/images/male.png" width="40px" style="border-radius:50%;"/>
+                    <img class="user-avatar" src="assets/images/male.png" width="40px" style="border-radius:50%;" data-toggle="tooltip" data-placement="top" title="Tooltip on top"/>
                 </div>
 
             </div>
@@ -41,7 +66,12 @@
                     <img class="user-avatar" src="assets/images/male.png" width="40px" style="border-radius:50%;"/>
                 </div>
                 <div class="col-2">
-                    <img class="user-avatar" src="assets/images/female.png" width="40px" style="border-radius:50%;"/>
+                    <div class="image_outer_container">
+                        <div class="green_icon"></div>
+                        <div class="image_inner_container">
+                            <img class="user-avatar" src="assets/images/female.png" width="40px" style="border-radius:50%;"/>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-2">
                     <img class="user-avatar" src="assets/images/male.png" width="40px" style="border-radius:50%;"/>
