--- a/src/app/layout/dashboard/components/chat/chat.component.html
+++ b/src/app/layout/dashboard/components/chat/chat.component.html
@@ -54,41 +54,14 @@
                 <div class="chat-body clearfix">
                     <div class="header">
                         <small class="text-muted"> <i class="fa fa-clock-o fa-fw"></i> 13 mins ago </small>
-                        <strong class="pull-right primary-font">Anshul Tayal</strong>
+                        <strong class="pull-right primary-font">Raj Kumar</strong>
                     </div>
                     <p>
-                        Lets connect once namrata is free
+                        Lets connect once renu is free
                     </p>
                 </div>
             </li>
-            <li class="left clearfix">
-                <span class="chat-img pull-left">
-                    <img alt="User Avatar" class="img-circle" src="http://placehold.it/50/55C1E7/fff" />
-                </span>
-                <div class="chat-body clearfix">
-                    <div class="header">
-                        <strong class="primary-font">Vinay Singh</strong>
-                        <small class="pull-right text-muted"> <i class="fa fa-clock-o fa-fw"></i> 14 mins ago </small>
-                    </div>
-                    <p>
-                        Ok
-                    </p>
-                </div>
-            </li>
-            <li class="right clearfix">
-                <span class="chat-img pull-right">
-                    <img alt="User Avatar" class="img-circle" src="http://placehold.it/50/FA6F57/fff" />
-                </span>
-                <div class="chat-body clearfix">
-                    <div class="header">
-                        <small class="text-muted"> <i class="fa fa-clock-o fa-fw"></i> 15 mins ago </small>
-                        <strong class="pull-right primary-font">Anshul Mittal</strong>
-                    </div>
-                    <p>
-                        Sure
-                    </p>
-                </div>
-            </li>
+
         </ul>
     </div>
     <!-- /.card-body -->
